# eml-to-mailmd

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  GEMINI.md  LICENSE  README.md  eml_to_mailmd.py  pyproject.toml
.github/: copilot-instructions.md
docs/: README.md  code-review-report.md
docs/archive/: REQ-001-html-entity-decoding.md  REQ-002-fix-pyproject-python-version.md  REQ-003-empty-attachments-yaml.md  REQ-004-fix-pep8-indent.md  REQ-005-document-exit-codes.md
docs/superpowers/plans/: 2026-03-18-rich-output.md  2026-03-18-validate-trash.md
docs/superpowers/specs/: 2026-03-18-rich-output-design.md  2026-03-18-validate-trash-design.md
docs/user-requests/: TEMPLATE.md
docs/user-requests/UR-001/: input.md
docs/user-requests/UR-002/: input.md
docs/user-requests/UR-003/: input.md
docs/user-requests/UR-004/: input.md
