[project]
name = "mail-to-md"
version = "0.1.0"
description = "Convert .eml/.elm email files into mail_*.md Markdown with YAML frontmatter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["eml_to_mailmd.py"]

[project.scripts]
eml2md = "eml_to_mailmd:main"
